# vala-panel

./: CMakeLists.txt
app/: application.c
applets/core/menumodel/: system-menus.ui
applets/wnck/wincmd/: wincmd.vala
data/desktop/: org.valapanel.application.appdata.xml.in  org.valapanel.application.desktop.in
data/gschemas/: org.valapanel.gschema.xml
data/man/: CMakeLists.txt
data/profiles/: CMakeLists.txt  default.in  org.valapanel.application.desktop
debian/: changelog  control  copyright  install  rules
po/: zh_CN.po
